--- a/Yucca/Yucca.csproj
+++ b/Yucca/Yucca.csproj
@@ -4,6 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <Version>3.0.0</Version>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <MajorVersion>3</MajorVersion>
+    <MinorVersion>0</MinorVersion>
+    <BuildVersion>0</BuildVersion>
     <Company>Syntax Rebels</Company>
   </PropertyGroup>
 
