--- a/YuccaTests/YuccaTests.csproj
+++ b/YuccaTests/YuccaTests.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Yucca.Inventory\Yucca.Inventory.csproj" />
     <ProjectReference Include="..\Yucca.Volatile\Yucca.Volatile.csproj" />
+    <ProjectReference Include="..\Yucca\Yucca.csproj" />
   </ItemGroup>
 
 </Project>
