Add .NET Aspire functionality to the solution

--- a/Yucca.WebAPI/Yucca.WebAPI.csproj
+++ b/Yucca.WebAPI/Yucca.WebAPI.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Yucca.ServiceDefaults\Yucca.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Yucca\Yucca.csproj" />
   </ItemGroup>
 
