--- a/Yucca.Web/Yucca.Web.csproj
+++ b/Yucca.Web/Yucca.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Yucca.Inventory\Yucca.Inventory.csproj" />
     <ProjectReference Include="..\Yucca.ServiceDefaults\Yucca.ServiceDefaults.csproj" />
   </ItemGroup>
