Added SQL databasde and implemented Supplier CRUD database operations

--- a/Yucca.Web/Yucca.Web.csproj
+++ b/Yucca.Web/Yucca.Web.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Yucca.Inventory\Yucca.Inventory.csproj" />
+    <ProjectReference Include="..\Yucca.Persistence.SQLServer\Yucca.Persistence.SqlServer.csproj" />
     <ProjectReference Include="..\Yucca.ServiceDefaults\Yucca.ServiceDefaults.csproj" />
   </ItemGroup>
 
