--- a/Yucca.WebAPI/appsettings.json
+++ b/Yucca.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "YuccaDbConnection": "<Database connection string>"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
