--- a/Yucca/Yucca.csproj
+++ b/Yucca/Yucca.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -18,6 +18,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Yucca.Inventory\Yucca.Inventory.csproj" />
     <ProjectReference Include="..\Yucca.Volatile\Yucca.Volatile.csproj" />
+    <ProjectReference Include="..\Yucca.Persistence.SQLServer\Yucca.Persistence.SqlServer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
