--- a/YuccaTests/YuccaTests.csproj
+++ b/YuccaTests/YuccaTests.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\Yucca.Inventory\Yucca.Inventory.csproj" />
     <ProjectReference Include="..\Yucca.Volatile\Yucca.Volatile.csproj" />
     <ProjectReference Include="..\Yucca\Yucca.csproj" />
+    <ProjectReference Include="..\Yucca.Output\Yucca.Output.csproj" />
   </ItemGroup>
 
 </Project>
