--- a/Yucca/Yucca.csproj
+++ b/Yucca/Yucca.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Operations\Supplier\" />
+  </ItemGroup>
+
 </Project>
